--- a/P010780.opf/meta.yml
+++ b/P010780.opf/meta.yml
@@ -4,4 +4,14 @@ source_metadata:
   id: bdr:W3CN4963
   title: ཡིད་བཞིན་རིན་པོ་ཆེའི་མཛོད་རྩ་འགྲེལ།
   author: ''
-  volumes: {}
+  volumes:
+    39f2c71938c74674aa12334eef5edce7:
+      image_group_id: I3CN4965
+      title: ''
+      volume_number: 1
+      total_pages: 518
+    a099ab064c7c444bb71316a62e654618:
+      image_group_id: I3CN4966
+      title: ''
+      volume_number: 2
+      total_pages: 966
