added base_file to meta

--- a/P010780.opf/meta.yml
+++ b/P010780.opf/meta.yml
@@ -10,8 +10,10 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 518
+      base_file: v001.txt
     a099ab064c7c444bb71316a62e654618:
       image_group_id: I3CN4966
       title: ''
       volume_number: 2
       total_pages: 966
+      base_file: v002.txt
