--- a/P010780.opf/layers/v001/Pagination.yml
+++ b/P010780.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 859d14122027465c90b8f43360513a7e
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2d266fdd5bda48989526ba97d3cbeff6:
