--- a/P010780.opf/layers/v002/Pagination.yml
+++ b/P010780.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6f77a8b05f4642f4b362c5a351861cbe
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a80ea8d2487c4ad89bd36e77329e4dfa:
